tests/unit/default/syntax-error/062-create-table-parens-name-colon-type-default.x.t
---- IN ----
+%table(id:int=42|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...(id:int=42` near `|` at position 17 - at line 1
---- EXIT ----
1
